--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="C:\Users\lucas\Pictures\Saved Pictures\Lucas Marcondes Novaes - Copia.jpg" class="img-circle" alt="Cinque Terre">
+                    <img src="img/media/lucasmnovaes-foto.jpg" class="img-circle" alt="Cinque Terre">
                     <hr class="light">
                     <p class="text-faded">Lucas Marcondes Novaes, 28 anos, natural de Lagoa Santa - MG. Graduado em Sistemas de Informação pela PUC Minas.
                     Desenvolvedor Web desde 2014.</p>
