correção na bio

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <img src="img/media/lucasmnovaes-foto.jpg" class="img-circle" alt="Cinque Terre">
                     <hr class="light">
-                    <p class="text-faded">Lucas Marcondes Novaes, 28 anos, natural de Lagoa Santa - MG. Graduado em Sistemas de Informação pela PUC Minas.
+                    <p class="text-faded">Lucas Marcondes Novaes, 28 anos, Lagoa Santa - MG. Graduado em Sistemas de Informação pela PUC Minas.
                     Desenvolvedor Web desde 2014.</p>
                     <a href="#services" class="page-scroll btn btn-default sr-button"><i class="fa fa-2x fa-angle-double-down"></i></a>
                 </div>
