--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
                         <h3>Frameworks</h3>
-                        <p class="text-muted">RichFaces <i class="fa fa-star" aria-hidden="true"></i></p>
+                        <p class="text-muted">RichFaces <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
                         <p class="text-muted">Hibernate <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
                         <p class="text-muted">Bootstrap <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
                         <p class="text-muted">JQuery <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
@@ -151,7 +151,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-cubes text-primary sr-icons"></i>
+                        <i class="fa fa-4x fa-database text-primary sr-icons"></i>
                         <h3>Banco de Dados</h3>
                         <p class="text-muted">Postgresql <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
                         <p class="text-muted">MySQL <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
