--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Contato</h2>
                     <hr class="primary">
-                    <p></p>
+                    <p>Desenvolvimento de websites ou soluções específicas de software? Entre em contato. </p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
