--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Bem vindo(a)!</h1>
                 <hr>
-                <p>Este WebSite apresenta meu histórico profissional e o meu nível de conhecimento em tecnologias de software.</p>
+                <p>Gostaria de fazer um site ou criar uma solução de software específica?</p>
+                <p>Eu posso te ajudar.</p>
                 <a href="#about" class="btn btn-primary page-scroll"><i class="fa fa-2x fa-angle-double-down"></i></a>
             </div>
         </div>
@@ -276,7 +277,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Contato</h2>
                     <hr class="primary">
-                    <p>Desenvolvimento de websites ou soluções específicas de software? Entre em contato. </p>
+                    <p></p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
