--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Bem vindo(a)!</h1>
                 <hr>
-                <p>Gostaria de fazer um site ou criar uma solução de software específica?</p>
-                <p>Eu posso te ajudar.</p>
+                <h3>Gostaria de fazer um site ou criar uma solução de software específica?</h3>
+                <h3>Eu posso te ajudar.</h3>
                 <a href="#about" class="btn btn-primary page-scroll"><i class="fa fa-2x fa-angle-double-down"></i></a>
             </div>
         </div>
