--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h1 id="homeHeading">Bem vindo(a)!</h1>
                 <hr>
                 <h3>Gostaria de fazer um site ou criar uma solução de software específica?</h3>
-                <h3>Eu posso te ajudar.</h3>
+                <h3>Eu posso te ajudar.</h3><br/>
                 <a href="#about" class="btn btn-primary page-scroll"><i class="fa fa-2x fa-angle-double-down"></i></a>
             </div>
         </div>
