--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                         <a class="page-scroll" href="#services">Conhecimentos</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Projetos</a>
+                        <a class="page-scroll" href="#portfolio">Trabalhos</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contato</a>
+                        <a class="page-scroll" href="#contact">Contatos</a>
                     </li>
                 </ul>
             </div>
@@ -168,7 +168,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Projetos</h2>
+                    <h2 class="section-heading">Trabalhos</h2>
                     <hr class="primary">
                 </div>
             </div>
