--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Desenvolvedor Java - UFMG-DCC
+                                    Desenvolvedor Java - UFMG-DCC<br/>
+                                    (2014-2015)
                                 </div>
                                 <div class="project-name">
                                     Projeto: Arouca
@@ -194,7 +195,8 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Desenvolvedor Front end - Virgulinas
+                                    Desenvolvedor Front end - Virgulinas<br/>
+                                    (2016)
                                 </div>
                                 <div class="project-name">
                                     Projeto: AMMP-MG
@@ -209,10 +211,11 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Desenvolvedor Web - Virgulinas
+                                    Desenvolvedor Web - Virgulinas<br/>
+                                    (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: JAM 2016 (WordPress)
+                                    Projeto: JAM 2016
                                 </div>
                             </div>
                         </div>
@@ -224,10 +227,11 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Desenvolvedor Web - Virgulinas
+                                    Desenvolvedor Web - Virgulinas<br/>
+                                    (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: Eduxe Web-Landing Page (WordPress)
+                                    Projeto: Eduxe Web-Landing Page
                                 </div>
                             </div>
                         </div>
@@ -240,11 +244,10 @@
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
                                     Desenvolvedor Web - Freelancer<br/>
-                                    (Fase final do projeto)
-
+                                    (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: Vendo Meu Antigo (WordPress)<br/>
+                                    Projeto: Vendo Meu Antigo<br/>
                                     *Site fora do ar
                                 </div>
                             </div>
@@ -257,11 +260,11 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Desenvolvedor Web - Freelancer <br/>
-                                    (Implementação de algoritmo em PHP)
+                                    Desenvolvedor Web - Freelancer<br/>
+                                    (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: Rockstar (WordPress)<br/>
+                                    Projeto: Rockstar<br/>
                                     *Site em construção
                                 </div>
                             </div>
