--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <p class="text-muted">RichFaces <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
                         <p class="text-muted">Hibernate <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
                         <p class="text-muted">Bootstrap <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
-                        <p class="text-muted">JQuery <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
+                        <p class="text-muted">JQuery <i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
