--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/arouca-foto.png" class="portfolio-box">
-                        <img src="img/portfolio/fullsize/arouca-foto.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/fullsize/arouca-foto.png" class="img-responsive" alt="arouca">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -183,7 +183,7 @@
                                     (2014-2015)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: Arouca
+                                    Projeto: <a href="https://arouca.unasus.gov.br/plataformaarouca/Home.app" target=_blank>Arouca</a>
                                 </div>
                             </div>
                         </div>
@@ -191,7 +191,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/ammpmg-home-foto.png" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/ammpmg-home-foto.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/ammpmg-home-foto.png" class="img-responsive" alt="ammp-mg">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -199,7 +199,7 @@
                                     (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: AMMP-MG
+                                    Projeto: <a href="http://www.ammp.org.br/" target=_blank>AMMP-MG</a>
                                 </div>
                             </div>
                         </div>
@@ -207,7 +207,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/jam-2016-home-foto.png" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/jam-2016-home-foto.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/jam-2016-home-foto.png" class="img-responsive" alt="jam2016">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -215,7 +215,7 @@
                                     (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: JAM 2016
+                                    Projeto: <a href="http://jam2016.com.br/" target=_blank>JAM 2016</a>
                                 </div>
                             </div>
                         </div>
@@ -223,7 +223,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/landing-page-eduxe-foto.png" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/landing-page-eduxe-foto.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/landing-page-eduxe-foto.png" class="img-responsive" alt="eduxe">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -231,7 +231,7 @@
                                     (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: Eduxe Web-Landing Page
+                                    Projeto: <a href="http://www.eduxe.com.br/" target=_blank>Eduxe Web-Landing Page</a>
                                 </div>
                             </div>
                         </div>
@@ -239,7 +239,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/vendomeuantigo-foto-logo.png" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/vendomeuantigo-foto-logo.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/vendomeuantigo-foto-logo.png" class="img-responsive" alt="vendo-meu-antigo">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -256,7 +256,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/rockstar-foto-logo.png" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/rockstar-foto-logo.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/thumbnails/rockstar-foto-logo.png" class="img-responsive" alt="rockstar">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -264,8 +264,7 @@
                                     (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: Rockstar<br/>
-                                    *Site em construção
+                                    Projeto: <a href="http://rockstar.mus.br" target=_blank>Rockstar</a>
                                 </div>
                             </div>
                         </div>
