--- a/index.html
+++ b/index.html
@@ -183,11 +183,12 @@
                                     (2014-2015)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: <a href="https://arouca.unasus.gov.br/plataformaarouca/Home.app" target=_blank>Arouca</a>
+                                    Projeto: Arouca
                                 </div>
                             </div>
                         </div>
                     </a>
+                    <a href="https://arouca.unasus.gov.br/plataformaarouca/Home.app" target=_blank>Link</a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/ammpmg-home-foto.png" class="portfolio-box">
