--- a/index.html
+++ b/index.html
@@ -188,7 +188,6 @@
                             </div>
                         </div>
                     </a>
-                    <a href="https://arouca.unasus.gov.br/plataformaarouca/Home.app" target=_blank>Link</a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/ammpmg-home-foto.png" class="portfolio-box">
@@ -200,7 +199,7 @@
                                     (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: <a href="http://www.ammp.org.br/" target=_blank>AMMP-MG</a>
+                                    Projeto: AMMP-MG
                                 </div>
                             </div>
                         </div>
@@ -216,7 +215,7 @@
                                     (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: <a href="http://jam2016.com.br/" target=_blank>JAM 2016</a>
+                                    Projeto: JAM 2016
                                 </div>
                             </div>
                         </div>
@@ -232,7 +231,7 @@
                                     (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: <a href="http://www.eduxe.com.br/" target=_blank>Eduxe Web-Landing Page</a>
+                                    Projeto: Eduxe Web-Landing Page
                                 </div>
                             </div>
                         </div>
@@ -249,7 +248,6 @@
                                 </div>
                                 <div class="project-name">
                                     Projeto: Vendo Meu Antigo<br/>
-                                    *Site fora do ar
                                 </div>
                             </div>
                         </div>
@@ -265,7 +263,7 @@
                                     (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: <a href="http://rockstar.mus.br" target=_blank>Rockstar</a>
+                                    Projeto: Rockstar
                                 </div>
                             </div>
                         </div>
