--- a/index.html
+++ b/index.html
@@ -81,8 +81,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <img src="img/media/lucasmnovaes-foto.jpg" class="img-circle" alt="Cinque Terre">
+                    <h2 class="section-heading">Sobre mim</h2>
                     <hr class="light">
+                    <p></p>
+                </div>            
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <img src="img/media/lucasmnovaes-foto.jpg" class="img-circle" alt="Cinque Terre">
+                    <p></p>
                     <p class="text-faded">Lucas Marcondes Novaes, 28 anos, Lagoa Santa - MG. Graduado em Sistemas de Informação pela PUC Minas.
                     Desenvolvedor Web desde 2014.</p>
                     <a href="#services" class="page-scroll btn btn-default sr-button"><i class="fa fa-2x fa-angle-double-down"></i></a>
