--- a/index.html
+++ b/index.html
@@ -424,6 +424,16 @@
         </div>
     </section>
 
+	<footer class="footer text-center bg-dark">
+	    <div class="container">
+	    	 <div class="row">
+	    	 	<div class="col-lg-12">
+	    			Copyright © 2017 Lucasmnovaes
+	    		</div>
+	    	</div>		
+	    </div>
+    </footer>
+
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
