--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <img src="img/media/lucasmnovaes-foto.jpg" class="img-circle" alt="Cinque Terre">
                     <p></p>
-                    <p class="text-faded">Lucas Marcondes Novaes, 28 anos, Lagoa Santa - MG. Graduado em Sistemas de Informação pela PUC Minas.
-                    Desenvolvedor Web desde 2014.</p>
+			<p class="text-faded">Lucas Marcondes Novaes, 28 anos, Lagoa Santa - MG<br/>
+				Graduado em Sistemas de Informação pela PUC Minas<br/>
+                    Desenvolvedor Web desde 2014</p>
                     <a href="#services" class="page-scroll btn btn-default sr-button"><i class="fa fa-2x fa-angle-double-down"></i></a>
                 </div>
             </div>
