--- a/index.html
+++ b/index.html
@@ -183,11 +183,11 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Desenvolvedor Java - UFMG-DCC<br/>
+                                    Desenvolvedor Java (Estágio) - UFMG-DCC<br/>
                                     (2014-2015)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: Plataforma Arouca-Sistema de Informação dos Profissionais de Saúde do Brasil
+                                    Projeto: Plataforma Arouca
                                 </div>
                             </div>
                         </div>
@@ -204,10 +204,10 @@
 				      </div>
 				      <div class="modal-body">
 				        <p>Desenvolvimento de funcionalidades em código Java, XHTML, CSS e JavaScript;</p>
-				        <p>Testes de unidade e correção de bugs;</p>
-				        <p>Frameworks: Hibernate, RichFaces e Arangi (criado pela própria empresa);</p>
-				        <p>Metodologia de desenvolvimento SCRUM Ágil.</p>
-				        <p>Link: <a href="http://arouca.unasus.gov.br/" target="_blank">arouca.unasus.gov.br</a></p>
+				        <p>Testes de unidade e correção de defeitos do sistema;</p>
+					<p>Participação nas reuniões definidas pelo Processo de Desenvolvimento SCRUM Ágil.</p>			        
+					<p>Observação:<br/>Projeto de grande porte, composto por uma equipe multidisciplinar (Testers, Desenvolvedores, Gerentes de projetos, entre outros).</p>
+				        <p><strong>Link: <a href="http://arouca.unasus.gov.br/" target="_blank">arouca.unasus.gov.br</a></strong></p>
 				      </div>
 				      <div class="modal-footer">
 				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
@@ -243,9 +243,8 @@
 				      </div>
 				      <div class="modal-body">
 				        <p>Desenvolvimento Front-end de todas as páginas do site;</p>
-				        <p>Codificação, testes do layout e correção de bugs;</p>
-				        <p>Frameworks: Bootstrap (CSS/JS) e FullCalendar (CSS/JS).</p>
-				        <p>Link: <a href="http://www.ammp.org.br/" target="_blank">www.ammp.org.br</a></p>
+				        <p>Codificação e testes de interface;</p>
+				        <p><strong>Link: <a href="http://www.ammp.org.br/" target="_blank">www.ammp.org.br</a></strong></p>
 				      </div>
 				      <div class="modal-footer">
 				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
@@ -281,7 +280,7 @@
 				      </div>
 				      <div class="modal-body">
 				        <p>Desenvolvimento em plataforma WordPress de todas as páginas do site;</p>
-				        <p>Codificação, testes e correção de bugs;</p>
+				        <p>Codificação e testes das funcionalidades;</p>
 				        <p>Link: <a href="http://jam2016.com.br" target=_blank>jam2016.com.br</a></p>				        
 				      </div>
 				      <div class="modal-footer">
@@ -318,8 +317,8 @@
 				      </div>
 				      <div class="modal-body">
 				        <p>Desenvolvimento da Landing Page em plataforma WordPress;</p>
-				        <p>Codificação, testes e correção de bugs;</p>	
-				        <p>Link: <a href="http://www.eduxe.com.br" target="_blank">www.eduxe.com.br</a></p>			      
+				        <p>Codificação e testes das funcionalidades;</p>	
+				        <p><strong>Link: <a href="http://www.eduxe.com.br" target="_blank">www.eduxe.com.br</a></strong></p>			      
 				      </div>
 				      <div class="modal-footer">
 				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
@@ -334,7 +333,7 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Desenvolvedor Web - Freelancer<br/>
+                                    Desenvolvedor Web (Freelancer) - Evolua<br/>
                                     (2016)
                                 </div>
                                 <div class="project-name">
@@ -354,10 +353,10 @@
 				        <h4 class="modal-title">Detalhes</h4>
 				      </div>
 				      <div class="modal-body">
-				        <p>Atuação na fase final do projeto;</p>
-				        <p>Desenvolvimento em PHP, HTML, CSS e JavaScript/AJAX em plataforma WordPress;</p>
-				        <p>Validação, testes e correção de bugs legados;</p>
-				        <p><strong> *Site fora do ar.</strong></p>
+				        <p>Desenvolvimento de funcionalidades em código PHP, HTML, CSS e JavaScript/AJAX em plataforma WordPress;</p>
+				        <p>Validação, testes e correção de defeitos do sistema;</p>
+					<p></p>
+					<p><strong>Link (website do cliente): <a href="http://evoluacomunicacao.com.br/" target="_blank">evoluacomunicacao.com.br</a></strong></p>
 				      </div>
 				      <div class="modal-footer">
 				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
@@ -372,11 +371,11 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Desenvolvedor Web - Freelancer<br/>
+                                    Desenvolvedor Web (Freelancer) - Rockstar<br/>
                                     (2016)
                                 </div>
                                 <div class="project-name">
-                                    Projeto: Rockstar
+                                    Projeto: Plataforma Rockstar
                                 </div>
                             </div>
                         </div>
@@ -392,8 +391,10 @@
 				        <h4 class="modal-title">Detalhes</h4>
 				      </div>
 				      <div class="modal-body">
-				        <p>Desenvolvimento de algoritmo em PHP, em plataforma WordPress, para exibir um ranking de autores por número de artigos produzidos, exibindo o perfil de cada um.</p>
-				        <p><strong>*Site em construção.</strong></p>
+					<p></p>
+				        <p>Desenvolvimento de algoritmo em PHP para exibir um ranking de autores por número de artigos produzidos, exibindo o perfil de cada um;</p>
+					<p>Observação: <br/>Projeto em andamento;</p>
+					<p><strong>Link (website do cliente): <a href="http://rockstar.mus.br" target="_blank">rockstar.mus.br</a></strong></p>
 				      </div>
 				      <div class="modal-footer">
 				        <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
