--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="header-content-inner">
                 <h1 id="homeHeading">Bem vindo(a)!</h1>
                 <hr>
-                <h3>Gostaria de fazer um site ou criar uma solução de software específica?</h3>
+                <h3>Gostaria de criar um site ou uma solução de software específica?</h3>
                 <h3>Eu posso te ajudar.</h3><br/>
                 <a href="#about" class="btn btn-primary page-scroll"><i class="fa fa-2x fa-angle-double-down"></i></a>
             </div>
